# databento-toys

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  python-app.yml
dbtoys/: dbclose.py  dbexplore.py
dbtoys/dbclose/: __main__.py  app.py
dbtoys/dbexplore/: __main__.py  app.py  command_parsers.py
dbtoys/utilities/: app.py  key.py  logging.py  monad.py  parser.py  splash.py
tests/: test_dbexplore.py  test_key.py
tests/test_dbexplore/: list_fields_GLBX.MDP3_definition_dbz.json  list_fields_GLBX.MDP3_trades_dbz.json  list_unit_prices_GLBX.MDP3_historical.json  list_unit_prices_XNAS.ITCH_live.json
